# SDG-CLI

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
crates/analyzer/: Cargo.toml
crates/analyzer/src/: lib.rs
crates/checks/: Cargo.toml
crates/checks/src/: admin.rs  annotations.rs  auth.rs  delegate.rs  division.rs  events.rs  global_state.rs  hardcoded_address.rs  key_collision.rs  lib.rs  overflow.rs  panics.rs  reentrancy.rs  std_imports.rs  storage.rs  transfer.rs  ttl.rs  util.rs  xc_input.rs  zero_address.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: fixture_scans.rs
docs/: architecture.md  checks.md
test-contracts/admin-safe/: Cargo.toml
test-contracts/admin-safe/src/: lib.rs
test-contracts/admin-vulnerable/: Cargo.toml
test-contracts/admin-vulnerable/src/: lib.rs
test-contracts/arithmetic-safe/: Cargo.toml
test-contracts/arithmetic-safe/src/: lib.rs
test-contracts/arithmetic-vulnerable/: Cargo.toml
test-contracts/arithmetic-vulnerable/src/: lib.rs
test-contracts/division-safe/: Cargo.toml
test-contracts/division-safe/src/: lib.rs
test-contracts/division-vulnerable/: Cargo.toml
test-contracts/division-vulnerable/src/: lib.rs
test-contracts/global-state-safe/: Cargo.toml
test-contracts/global-state-safe/src/: lib.rs
test-contracts/global-state-vulnerable/: Cargo.toml
test-contracts/global-state-vulnerable/src/: lib.rs
test-contracts/panic-safe/: Cargo.toml
test-contracts/panic-safe/src/: lib.rs
test-contracts/panic-vulnerable/: Cargo.toml
test-contracts/panic-vulnerable/src/: lib.rs
test-contracts/reentrancy-safe/: Cargo.toml
test-contracts/reentrancy-safe/src/: lib.rs
test-contracts/reentrancy-vulnerable/: Cargo.toml
test-contracts/reentrancy-vulnerable/src/: lib.rs
test-contracts/safe/: Cargo.toml
test-contracts/safe/src/: lib.rs
test-contracts/storage-safe/: Cargo.toml
test-contracts/storage-safe/src/: lib.rs
test-contracts/storage-vulnerable/: Cargo.toml
test-contracts/storage-vulnerable/src/: lib.rs
test-contracts/vulnerable/: Cargo.toml
test-contracts/vulnerable/src/: lib.rs
test-contracts/zero-address-safe/: Cargo.toml
test-contracts/zero-address-safe/src/: lib.rs
test-contracts/zero-address-vulnerable/: Cargo.toml
test-contracts/zero-address-vulnerable/src/: lib.rs
