[workspace]
resolver = "2"
members = ["crates/cli", "crates/analyzer", "crates/checks"]
exclude = ["test-contracts"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joel-metal/SDG-CLI"

[workspace.dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
glob = "0.3"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
thiserror = "2.0"
rayon = "1.10"
