[package]
name = "sdg-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AST walking and check orchestration for SDG-CLI"

[dependencies]
sdg-checks = { path = "../checks" }
syn.workspace = true
serde.workspace = true
walkdir.workspace = true
glob.workspace = true
thiserror.workspace = true
rayon.workspace = true
