[package]
name = "sdg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for SDG-CLI smart contract scanner"

[[bin]]
name = "sdg"
path = "src/main.rs"

[dependencies]
sdg-analyzer = { path = "../analyzer" }
sdg-checks = { path = "../checks" }
clap.workspace = true
colored.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
